html and css for basic layout done

--- a/index.html
+++ b/index.html
@@ -8,28 +8,31 @@
 	</head>
 	<body>
 		<div id='calculator'>
-			<button type='button' id=''>CLR</button>
-			<button type='button' id=''>DEL</button>
-			<button type='button' id=''>&divide;</button>
+			<div id='calcDisplay'><p>1234567890&times;&divide;+-=</p></div>
 
-			<button type='button' id=''>7</button>
-			<button type='button' id=''>8</button>
-			<button type='button' id=''>9</button>
-			<button type='button' id=''>&times;</button>
+			<button type='button' class='funcBtn' value='clear'>CLR</button>
+			<button type='button' class='funcBtn' value=''>DEL</button>
+			<button type='button' class='funcBtn' value=''>+/-</button>
+			<button type='button' class='funcBtn' value=''>&divide;</button>
 
-			<button type='button' id=''>4</button>
-			<button type='button' id=''>5</button>
-			<button type='button' id=''>6</button>
-			<button type='button' id=''>-</button>
+			<button type='button' class='numBtn' value=''>7</button>
+			<button type='button' class='numBtn' value=''>8</button>
+			<button type='button' class='numBtn' value=''>9</button>
+			<button type='button' class='funcBtn' value=''>&times;</button>
 
-			<button type='button' id=''>1</button>
-			<button type='button' id=''>2</button>
-			<button type='button' id=''>3</button>
-			<button type='button' id=''>+</button>
+			<button type='button' class='numBtn' value=''>4</button>
+			<button type='button' class='numBtn' value=''>5</button>
+			<button type='button' class='numBtn' value=''>6</button>
+			<button type='button' class='funcBtn' value=''>-</button>
 
-			<button type='button' id=''>0</button>
-			<button type='button' id=''>.</button>
-			<button type='button' id=''>=</button>
+			<button type='button' class='numBtn' value=''>1</button>
+			<button type='button' class='numBtn' value=''>2</button>
+			<button type='button' class='numBtn' value=''>3</button>
+			<button type='button' class='funcBtn' value=''>+</button>
+
+			<button type='button' class='numBtn' value=''>.</button>
+			<button type='button' class='numBtn' value=''>0</button>
+			<button type='button' class='funcBtn' id='eqBtn' value=''>=</button>
 		</div>
 	</body>
 	<footer>
