only allows valid strings, parses correctly, parses string correctly. hangs on something - i think minus, just add keyboard support and see if can figure out where it hangs.

--- a/index.html
+++ b/index.html
@@ -10,29 +10,28 @@
 		<div id='calculator'>
 			<div id='calcDisplay'><p>1234567890&times;&divide;+-=</p></div>
 
-			<button type='button' class='funcBtn' value='clear'>CLR</button>
-			<button type='button' class='funcBtn' value=''>DEL</button>
-			<button type='button' class='funcBtn' value=''>+/-</button>
-			<button type='button' class='funcBtn' value=''>&divide;</button>
+			<button type='button' class='opBtn darkBtn wideBtn' id='clearBtn'>CLR</button>
+			<button type='button' class='opBtn darkBtn' id='deleteBtn'>DEL</button>
+			<button type='button' class='funcBtn darkBtn' value='/'>&divide;</button>
 
-			<button type='button' class='numBtn' value=''>7</button>
-			<button type='button' class='numBtn' value=''>8</button>
-			<button type='button' class='numBtn' value=''>9</button>
-			<button type='button' class='funcBtn' value=''>&times;</button>
+			<button type='button' class='numBtn lightBtn' value='7'>7</button>
+			<button type='button' class='numBtn lightBtn' value='8'>8</button>
+			<button type='button' class='numBtn lightBtn' value='9'>9</button>
+			<button type='button' class='funcBtn darkBtn' value='&times;'>&times;</button>
 
-			<button type='button' class='numBtn' value=''>4</button>
-			<button type='button' class='numBtn' value=''>5</button>
-			<button type='button' class='numBtn' value=''>6</button>
-			<button type='button' class='funcBtn' value=''>-</button>
+			<button type='button' class='numBtn lightBtn' value='4'>4</button>
+			<button type='button' class='numBtn lightBtn' value='5'>5</button>
+			<button type='button' class='numBtn lightBtn' value='6'>6</button>
+			<button type='button' class='funcBtn darkBtn' value='&minus;'>&minus;</button>
 
-			<button type='button' class='numBtn' value=''>1</button>
-			<button type='button' class='numBtn' value=''>2</button>
-			<button type='button' class='numBtn' value=''>3</button>
-			<button type='button' class='funcBtn' value=''>+</button>
+			<button type='button' class='numBtn lightBtn' value='1'>1</button>
+			<button type='button' class='numBtn lightBtn' value='2'>2</button>
+			<button type='button' class='numBtn lightBtn' value='3'>3</button>
+			<button type='button' class='funcBtn darkBtn' value='+'>+</button>
 
-			<button type='button' class='numBtn' value=''>.</button>
-			<button type='button' class='numBtn' value=''>0</button>
-			<button type='button' class='funcBtn' id='eqBtn' value=''>=</button>
+			<button type='button' class='funcBtn lightBtn' value='.'>.</button>
+			<button type='button' class='numBtn lightBtn' value='0'>0</button>
+			<button type='button' class='opBtn darkBtn wideBtn' id='eqBtn' value='eq'>=</button>
 		</div>
 	</body>
 	<footer>
