think i fixed working with negative output and div by 0 bugs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<button type='button' class='numBtn lightBtn' value='4'>4</button>
 			<button type='button' class='numBtn lightBtn' value='5'>5</button>
 			<button type='button' class='numBtn lightBtn' value='6'>6</button>
-			<button type='button' class='funcBtn darkBtn' value='&minus;'>&minus;</button>
+			<button type='button' class='funcBtn darkBtn' value='-'>&minus;</button>
 
 			<button type='button' class='numBtn lightBtn' value='1'>1</button>
 			<button type='button' class='numBtn lightBtn' value='2'>2</button>
