added keyboard supprt

--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
 		<div id='calculator'>
 			<div id='calcDisplay'><p>1234567890&times;&divide;+-=</p></div>
 
-			<button type='button' class='opBtn darkBtn wideBtn' id='clearBtn'>CLR</button>
-			<button type='button' class='opBtn darkBtn' id='deleteBtn'>DEL</button>
-			<button type='button' class='funcBtn darkBtn' value='/'>&divide;</button>
+			<button type='button' id='btnCLR' class='opBtn darkBtn wideBtn'>CLR</button>
+			<button type='button' id='btnDEL' class='opBtn darkBtn' id='deleteBtn'>DEL</button>
+			<button type='button' id='btnDIV' class='funcBtn darkBtn' value='/'>&divide;</button>
 
-			<button type='button' class='numBtn lightBtn' value='7'>7</button>
-			<button type='button' class='numBtn lightBtn' value='8'>8</button>
-			<button type='button' class='numBtn lightBtn' value='9'>9</button>
-			<button type='button' class='funcBtn darkBtn' value='&times;'>&times;</button>
+			<button type='button' id='btn7' class='numBtn lightBtn' value='7'>7</button>
+			<button type='button' id='btn8' class='numBtn lightBtn' value='8'>8</button>
+			<button type='button' id='btn9' class='numBtn lightBtn' value='9'>9</button>
+			<button type='button' id='btnTIMES' class='funcBtn darkBtn' value='&times;'>&times;</button>
 
-			<button type='button' class='numBtn lightBtn' value='4'>4</button>
-			<button type='button' class='numBtn lightBtn' value='5'>5</button>
-			<button type='button' class='numBtn lightBtn' value='6'>6</button>
-			<button type='button' class='funcBtn darkBtn' value='-'>&minus;</button>
+			<button type='button' id='btn4' class='numBtn lightBtn' value='4'>4</button>
+			<button type='button' id='btn5' class='numBtn lightBtn' value='5'>5</button>
+			<button type='button' id='btn6' class='numBtn lightBtn' value='6'>6</button>
+			<button type='button' id='btnMINUS' class='funcBtn darkBtn' value='-'>&minus;</button>
 
-			<button type='button' class='numBtn lightBtn' value='1'>1</button>
-			<button type='button' class='numBtn lightBtn' value='2'>2</button>
-			<button type='button' class='numBtn lightBtn' value='3'>3</button>
-			<button type='button' class='funcBtn darkBtn' value='+'>+</button>
+			<button type='button' id='btn1' class='numBtn lightBtn' value='1'>1</button>
+			<button type='button' id='btn2' class='numBtn lightBtn' value='2'>2</button>
+			<button type='button' id='btn3' class='numBtn lightBtn' value='3'>3</button>
+			<button type='button' id='btnPLUS' class='funcBtn darkBtn' value='+'>+</button>
 
-			<button type='button' class='funcBtn lightBtn' value='.'>.</button>
-			<button type='button' class='numBtn lightBtn' value='0'>0</button>
-			<button type='button' class='opBtn darkBtn wideBtn' id='eqBtn' value='eq'>=</button>
+			<button type='button' id='btnDOT' class='funcBtn lightBtn' value='.'>.</button>
+			<button type='button' id='btn0' class='numBtn lightBtn' value='0'>0</button>
+			<button type='button' id='btnEQ' class='opBtn darkBtn wideBtn' value='eq'>=</button>
 		</div>
 	</body>
 	<footer>
